orgMetadata/force-app/main/default/objects/UserFiles__c/UserFiles__c.object-meta.xml
<CustomObject>
    <label>UserFile</label>
    <nameField>
        <label>UserFiles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>