orgMetadata/force-app/main/default/objects/UserFiles__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>